# vikos

./: .gitignore  Cargo.toml  Changelog.md  DEVELOPER_NOTES.md  README.md  iris.csv
examples/: bikesharing.rs  digits.rs  iris.rs  iris_vec.rs  mean.rs
examples/data/: iris.csv
src/: LICENSE  README.md  array.rs  cost.rs  crisp.rs  lib.rs  linear_algebra.rs  model.rs  teacher.rs  train.rs  training.rs  tutorial.rs
tests/: lib.rs
