[package]
name = "vikos"
version = "0.1.8"
authors = ["Holger Peters <holger.peters@blue-yonder.com>", "Markus Klein <markus.klein@blue-yonder.com>"]
description = "A machine learning library for supervised training of parametrized models"
license = "MIT"
repository = "https://github.com/blue-yonder/vikos"
documentation = "https://docs.rs/vikos/"
readme = "README.md"
keywords = ["machine","learning","machine-learning"]

[dependencies]
num = "0.1.36"
rustc-serialize = "0.3.21"

[dev-dependencies]
csv = "1"
